--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,11 @@ if (${SUPPORTS_FVISIBILITY_INLINES_HIDDEN_FLAG} EQUAL "1")
 endif()
 
 add_library(loop-analysis-pass SHARED
-  ./UTEID-loop-analysis-pass.cpp
+        an35288-loop-analysis-pass.cpp
 )
 
 add_library(loop-opt-pass SHARED
-  ./UTEID-loop-opt-pass.cpp
+        an35288-loop-opt-pass.cpp
 )
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
